kubernetes/apps/selfhosted/freshrss/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: freshrss
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: freshrss
      app.kubernetes.io/instance: freshrss
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
